# interrapidisimo_churn

./: .gitignore  README.md  pyproject.toml
1_data/2_cleaned/: 02_anonymized.csv  05_cleaned_customers.csv
1_data/3_features/: pipeline.pkl
1_data/real_data/1_raw/: raw_data_customers_lpgr.csv
1_data/real_data/2_cleaned/: 01_cleaned_real.csv
1_data/real_data/3_features/: pipeline_real.pkl
1_data/synthetic_data/1_raw/: raw_data_customers.csv
1_data/synthetic_data/2_cleaned/: 03_dates_cleaned.csv  04_imputed.csv
2_notebooks/: 01_modeling_datasetsintetico.ipynb
3_src/: generate_notebook_datasetsint.py  generate_synthetic_data.py
3_src/1_governance/: 01_eda_quality_report.py  02_anonymization.py  03_dates_cleaning.py
3_src/2_modeling/: 01_train_model.py
3_src/3_architecture/: 01_aws_architecture.py
3_src/real_data/1_governance/: 01_clean_real.py
3_src/real_data/2_modeling/: 02_model_real.py  03_shap_real.py
3_src/synthetic_data/: generate_notebook_datasetsint.py  generate_synthetic_data.py
3_src/synthetic_data/1_governance/: 01_eda_quality_report.py  02_anonymization.py  03_dates_cleaning.py  04_imputation_dedup.py  05_cleaned_file.py
3_src/synthetic_data/2_modeling/: 01_train_model.py  02_shap_analysis.py
3_src/synthetic_data/3_architecture/: 01_aws_architecture.py
4_outputs/2_metrics/: 01_quality_report.txt  04_imputation_report.txt
4_outputs/real_data/2_metrics/: 01_clean_real_report.txt  02_model_real_report.txt  03_shap_real_report.txt
4_outputs/synthetic_data/2_metrics/: 02_anonymization_report.txt  03_date_cleaning_report.txt  (+3 more)
