[project]
name = "interrapidisimo-churn"
version = "0.1.0"
description = "Churn prediction model for Interrapidisimo"
authors = [
    {name = "Julian Echeverry",email = "julianecheverrysabas@gmail.com"}
]
requires-python = "^3.11"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "shap (>=0.51.0,<0.52.0)",
    "faker (>=40.15.0,<41.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
